# K_Robot_software

./: .gitattributes  LICENSE  README.md  main.py  pyproject.toml
src/: preprocessing.py  reasoning.py  training.py
src/appearance/: body.py  face.py
src/modules/: hearing.py  memory.py  speaking.py  thinking.py  watching.py
src/service/: api.py  llm.py  tts.py
