[project]
name = "k-robot"
version = "0.1.0"
description = "A project for Lucy"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "numpy>=2.1.0",
    "opencv-python>=4.11.0.86",
    "matplotlib>=3.10.0",
    "onnx>=1.14.0",
    "onnxruntime>=1.15.0",
    "onnxscript>=0.5.7",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "ultralytics>=8.3.247",
    "torchaudio",
    "pandas"
]

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }


[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.pyright]
pythonVersion = "3.10"
extraPaths = ["src"]
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportMissingTypeStubs = false
reportPrivateImportUsage = false

